# discord-c4

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.circleci/: config.yml
src/: connect4.rs  main.rs  protocol.rs
src/connect4/: board.rs  cfile1.c  cfile2.c  monte_carlo_ai.rs  persistency.rs
src/connect4/ai_c_files/: board.c  board.h  called_from_rust.c  montecarlo.c  montecarlo.h  stack.c  stack.h
src/connect4/board/: magic_numbers.rs  test.rs
src/connect4/persistency/: test.rs
