[package]
name = "discord-c4"
version = "0.1.0"
authors = ["Julian Osorio <juliancamilo.osorio@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[build-dependencies]
cc = "1.0"


